fixed scrollbar issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,8 @@
 .no-scrollbar::-webkit-scrollbar{
   display: none;
 }
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;               
+}
